Fixed Bug: Path not showing when walls are added in first load

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -409,9 +409,6 @@ h6 {
   position: relative;
   justify-content: center;
 }
-.pulse {
-  border: 20px solid red;
-}
 //  @@@@@@@@@@@@@@@@@@@@@ MEDIA QUERY @@@@@@@@@@@@@@@@@@@@@
 @media screen and (max-width: 700px) {
   .pathFinding-panel {
